--- a/src/views/dashboard/index.less
+++ b/src/views/dashboard/index.less
@@ -20,10 +20,10 @@
 }
 
 .app-container-1 {
-  background-color: rgb(240, 242, 245);
+  background-color: rgb(214, 252, 79);
   position: relative;
-  height: 100vh;
-  background-image: url("~@/assets/images/bg.jpg");
+  height: 83vh;
+  background-image: url("~@/assets/images/bg.svg");
   background-repeat: no-repeat;
   background-size: cover;
   .chart-wrapper {
